[feat] Add Version class
The Version class makes the compiler version accessible for the source
code.

--- a/src/juice/CMakeLists.txt
+++ b/src/juice/CMakeLists.txt
@@ -7,3 +7,5 @@
 #
 # See https://github.com/juice-lang/juice/blob/master/LICENSE for license information
 # See https://github.com/juice-lang/juice/blob/master/CONTRIBUTORS for the list of Swift project authors
+
+add_subdirectory(Basic)
