[feat] Add first drivers for error, usage and version
The classes ErrorDriver, UsageDriver and VersionDriver are picked by
simple argument parsing. If flag '-h' or '--help' is specified, simple
usage information is printed, flag '-v' or '-version' prints the juice
compiler version to stdout.

--- a/src/juice/Basic/CMakeLists.txt
+++ b/src/juice/Basic/CMakeLists.txt
@@ -9,7 +9,9 @@
 # See https://github.com/juice-lang/juice/blob/master/CONTRIBUTORS.txt for the list of juice project authors
 
 
-add_library(juiceBasic STATIC Version.cpp)
+add_library(juiceBasic STATIC
+        StringHelpers.cpp
+        Version.cpp)
 
 string(REGEX REPLACE "([0-9]+)\\.[0-9]+(\\.[0-9]+)?" "\\1" JUICE_VERSION_MAJOR ${JUICE_VERSION})
 string(REGEX REPLACE "[0-9]+\\.([0-9]+)(\\.[0-9]+)?" "\\1" JUICE_VERSION_MINOR ${JUICE_VERSION})
