--- a/src/juice/Basic/CMakeLists.txt
+++ b/src/juice/Basic/CMakeLists.txt
@@ -11,6 +11,7 @@
 
 add_library(juiceBasic STATIC
         StringHelpers.cpp
+        StringRef.cpp
         Version.cpp)
 
 string(REGEX REPLACE "([0-9]+)\\.[0-9]+(\\.[0-9]+)?" "\\1" JUICE_VERSION_MAJOR ${JUICE_VERSION})
