--- a/src/juice/Basic/CMakeLists.txt
+++ b/src/juice/Basic/CMakeLists.txt
@@ -10,6 +10,7 @@
 
 
 add_library(juiceBasic STATIC
+        SourceBuffer.cpp
         StringHelpers.cpp
         StringRef.cpp
         Version.cpp)
