[WIP] Change driver structure to use the Diagnostics as output
CompilerDriver and ErrorDriver now output their errors using the
infrastructure of the DiagnosticEngine.

--- a/tools/juice/CMakeLists.txt
+++ b/tools/juice/CMakeLists.txt
@@ -10,6 +10,6 @@
 
 
 add_executable(juice juice.cpp)
-target_link_libraries(juice juiceBasic juiceDriver)
+target_link_libraries(juice juiceBasic juiceDiagnostics juiceDriver)
 
 install(TARGETS juice DESTINATION bin)
