[WIP] Add basic structure of Parser class
The Parser class will generate the program as an AST (abstract syntax
tree) from the LexerTokens generated by the Lexer.

--- a/src/juice/Parser/CMakeLists.txt
+++ b/src/juice/Parser/CMakeLists.txt
@@ -12,4 +12,5 @@
 add_library(juiceParser STATIC
         FSM.cpp
         Lexer.cpp
-        LexerToken.cpp)
+        LexerToken.cpp
+        Parser.cpp)
