[WIP] Add first llvm libraries to build process
Some llvm libraries are linked into the compiler target, to enable first
codegen.

--- a/tools/juice/CMakeLists.txt
+++ b/tools/juice/CMakeLists.txt
@@ -10,6 +10,7 @@
 
 
 add_executable(juice juice.cpp)
-target_link_libraries(juice juiceBasic juiceDiagnostics juiceDriver juiceParser)
+target_link_libraries(juice ncurses)
+target_link_libraries(juice juiceBasic juiceDiagnostics juiceDriver juiceParser ${LLVM_LIB_DIR}/libLLVMBinaryFormat.a ${LLVM_LIB_DIR}/libLLVMCore.a ${LLVM_LIB_DIR}/libLLVMDemangle.a ${LLVM_LIB_DIR}/libLLVMSupport.a)
 
 install(TARGETS juice DESTINATION bin)
