[WIP] Implement SourceManager based on llvm
The SourceManager class now manages the SourceBuffers, which are now
implemented based on the llvm infrastructure. Other classes are also
based on llvm now.

--- a/src/juice/Basic/CMakeLists.txt
+++ b/src/juice/Basic/CMakeLists.txt
@@ -11,6 +11,7 @@
 
 add_library(juiceBasic STATIC
         SourceBuffer.cpp
+        SourceManager.cpp
         StringHelpers.cpp
         StringRef.cpp
         Version.cpp)
