[feat] Improve build process
build_script now is able to update juice-llvm und builds it only if it
is needed.

--- a/tools/juice/CMakeLists.txt
+++ b/tools/juice/CMakeLists.txt
@@ -11,6 +11,6 @@
 
 add_executable(juice juice.cpp)
 target_link_libraries(juice ncurses)
-target_link_libraries(juice juiceBasic juiceDiagnostics juiceDriver juiceParser ${LLVM_LIB_DIR}/libLLVMBinaryFormat.a ${LLVM_LIB_DIR}/libLLVMCore.a ${LLVM_LIB_DIR}/libLLVMDemangle.a ${LLVM_LIB_DIR}/libLLVMSupport.a)
+target_link_libraries(juice juiceBasic juiceDiagnostics juiceDriver juiceParser ${LLVM_LIBS})
 
 install(TARGETS juice DESTINATION bin)
