[WIP] Move dummy code generation to it's own class
The dummy llvm IR code is now generated in the DummyCodegen class,
rather than by the CompilerDriver itself.

--- a/src/juice/CMakeLists.txt
+++ b/src/juice/CMakeLists.txt
@@ -9,6 +9,7 @@
 # See https://github.com/juice-lang/juice/blob/master/CONTRIBUTORS.txt for the list of juice project authors
 
 
+add_subdirectory(AST)
 add_subdirectory(Basic)
 add_subdirectory(Diagnostics)
 add_subdirectory(Driver)
