--- a/tools/juice/CMakeLists.txt
+++ b/tools/juice/CMakeLists.txt
@@ -11,6 +11,6 @@
 
 add_executable(juice juice.cpp)
 target_link_libraries(juice ncurses)
-target_link_libraries(juice juiceBasic juiceDiagnostics juiceDriver juiceParser ${LLVM_LIBS})
+target_link_libraries(juice juiceAST juiceBasic juiceDiagnostics juiceDriver juiceParser ${LLVM_LIBS})
 
 install(TARGETS juice DESTINATION bin)
