[WIP] Add basic variable declaration parsing
Variables declarations are now recognized by the parser and also do
generate llvm code, but there is no way of accessing variables yet.

--- a/src/juice/AST/CMakeLists.txt
+++ b/src/juice/AST/CMakeLists.txt
@@ -11,5 +11,6 @@
 add_library(juiceAST STATIC
         AST.cpp
         Codegen.cpp
+        DeclarationAST.cpp
         ExpressionAST.cpp
         StatementAST.cpp)
