--- a/src/juice/Basic/CMakeLists.txt
+++ b/src/juice/Basic/CMakeLists.txt
@@ -9,6 +9,8 @@
 # See https://github.com/juice-lang/juice/blob/master/CONTRIBUTORS.txt for the list of juice project authors
 
 
+add_compile_options(${LLVM_COMPILE_FLAGS})
+
 add_library(juiceBasic STATIC
         RawStreamHelpers.cpp
         SourceBuffer.cpp
