--- a/src/juice/Diagnostics/CMakeLists.txt
+++ b/src/juice/Diagnostics/CMakeLists.txt
@@ -8,5 +8,8 @@
 # See https://github.com/juice-lang/juice/blob/master/LICENSE for license information
 # See https://github.com/juice-lang/juice/blob/master/CONTRIBUTORS.txt for the list of juice project authors
 
+
+add_compile_options(${LLVM_COMPILE_FLAGS})
+
 add_library(juiceDiagnostics STATIC
         Diagnostics.cpp)
