--- a/src/juice/Parser/CMakeLists.txt
+++ b/src/juice/Parser/CMakeLists.txt
@@ -9,8 +9,9 @@
 # See https://github.com/juice-lang/juice/blob/master/CONTRIBUTORS.txt for the list of juice project authors
 
 
+add_compile_options(${LLVM_COMPILE_FLAGS})
+
 add_library(juiceParser STATIC
-        ../AST/ExpressionAST.cpp
         FSM.cpp
         Lexer.cpp
         LexerToken.cpp
