[WIP] Add type-checked Ast node variants and implement basic conversion
Each `ast::AST` now has a corresponding `sema::TypeCheckedAST`, contain-
ing also the analyzed type besides the parsed information.

--- a/src/juice/Sema/CMakeLists.txt
+++ b/src/juice/Sema/CMakeLists.txt
@@ -12,4 +12,8 @@
 add_compile_options(${LLVM_COMPILE_FLAGS})
 
 add_library(juiceSema STATIC
-        Type.cpp)
+        Type.cpp
+        TypeCheckedAST.cpp
+        TypeCheckedDeclarationAST.cpp
+        TypeCheckedExpressionAST.cpp
+        TypeCheckedStatementAST.cpp)
