[feat][WIP] Add type-checking to the compilation pipeline
For now the compiler won't generate any code, but will only analyze the
source code semantically.

--- a/src/juice/Sema/CMakeLists.txt
+++ b/src/juice/Sema/CMakeLists.txt
@@ -16,4 +16,5 @@ add_library(juiceSema STATIC
         TypeCheckedAST.cpp
         TypeCheckedDeclarationAST.cpp
         TypeCheckedExpressionAST.cpp
-        TypeCheckedStatementAST.cpp)
+        TypeCheckedStatementAST.cpp
+        TypeChecker.cpp)
