[refactor][WIP] Add wrapper for `sema::Type`
Because `sema::Type` (now `sema::TypeBase`) is always a pointer, it was
a pain to compare two different instances. Now it is always contained
inside the new `sema::Type` class, which can be passed by value and
which implements the comparison logic.

--- a/src/juice/Sema/CMakeLists.txt
+++ b/src/juice/Sema/CMakeLists.txt
@@ -12,6 +12,7 @@
 add_compile_options(${LLVM_COMPILE_FLAGS})
 
 add_library(juiceSema STATIC
+        BuiltinType.cpp
         Type.cpp
         TypeCheckedAST.cpp
         TypeCheckedDeclarationAST.cpp
