[feat] Move LLVM IR generation into its own module
The compiler now does generate code again.

--- a/src/juice/CMakeLists.txt
+++ b/src/juice/CMakeLists.txt
@@ -13,5 +13,6 @@ add_subdirectory(AST)
 add_subdirectory(Basic)
 add_subdirectory(Diagnostics)
 add_subdirectory(Driver)
+add_subdirectory(IRGen)
 add_subdirectory(Parser)
 add_subdirectory(Sema)
