--- a/src/juice/IRGen/CMakeLists.txt
+++ b/src/juice/IRGen/CMakeLists.txt
@@ -1,4 +1,4 @@
-# tools/juice/CMakeLists.txt - juice tool CMake file
+# src/juice/IRGen/CMakeLists.txt - juice IRGen sources CMake file
 #
 # This file is part of the juice open source project
 #
@@ -11,16 +11,8 @@
 
 add_compile_options(${LLVM_COMPILE_FLAGS})
 
-add_executable(juice juice.cpp)
-target_link_libraries(juice ncurses)
-target_link_libraries(juice
-        juiceAST
-        juiceBasic
-        juiceDiagnostics
-        juiceDriver
-        juiceIRGen
-        juiceParser
-        juiceSema
-        ${LLVM_LIBS})
-
-install(TARGETS juice DESTINATION bin)
+add_library(juiceIRGen STATIC
+        GenDeclaration.cpp
+        GenExpression.cpp
+        GenStatement.cpp
+        IRGen.cpp)
