--- a/src/juice/AST/CMakeLists.txt
+++ b/src/juice/AST/CMakeLists.txt
@@ -9,7 +9,7 @@
 # See https://github.com/juice-lang/juice/blob/master/CONTRIBUTORS.txt for the list of juice project authors
 
 
-add_compile_options(${LLVM_COMPILE_FLAGS})
+add_compile_options(${LLVM_COMPILE_FLAG_LIST})
 
 add_library(juiceAST STATIC
         AST.cpp
