--- a/tools/juice/CMakeLists.txt
+++ b/tools/juice/CMakeLists.txt
@@ -9,10 +9,11 @@
 # See https://github.com/juice-lang/juice/blob/master/CONTRIBUTORS.txt for the list of juice project authors
 
 
-add_compile_options(${LLVM_COMPILE_FLAGS})
+add_compile_options(${LLVM_COMPILE_FLAG_LIST})
 
 add_executable(juice juice.cpp)
 target_link_libraries(juice ncurses)
-target_link_libraries(juice juiceAST juiceBasic juiceDiagnostics juiceDriver juiceParser ${LLVM_LIBS})
+target_link_libraries(juice juiceAST juiceBasic juiceDiagnostics juiceDriver juiceParser)
+target_link_libraries(juice ${LLVM_LIB_LIST})
 
 install(TARGETS juice DESTINATION bin)
