--- a/src/juice/Basic/CMakeLists.txt
+++ b/src/juice/Basic/CMakeLists.txt
@@ -9,16 +9,6 @@
 # See https://github.com/juice-lang/juice/blob/master/CONTRIBUTORS.txt for the list of juice project authors
 
 
-add_compile_options(${LLVM_COMPILE_FLAGS})
-
-add_library(juiceBasic STATIC
-        Error.cpp
-        RawStreamHelpers.cpp
-        SourceBuffer.cpp
-        SourceManager.cpp
-        StringHelpers.cpp
-        Version.cpp)
-
 string(REGEX REPLACE "([0-9]+)\\.[0-9]+(\\.[0-9]+)?" "\\1" JUICE_VERSION_MAJOR ${JUICE_VERSION})
 string(REGEX REPLACE "[0-9]+\\.([0-9]+)(\\.[0-9]+)?" "\\1" JUICE_VERSION_MINOR ${JUICE_VERSION})
 
@@ -34,3 +24,14 @@ else()
     set_property(SOURCE Version.cpp APPEND_STRING PROPERTY COMPILE_FLAGS
             " -DJUICE_HAS_VERSION_PATCHLEVEL=0")
 endif()
+
+
+add_compile_options(${LLVM_COMPILE_FLAG_LIST})
+
+add_library(juiceBasic STATIC
+        Error.cpp
+        RawStreamHelpers.cpp
+        SourceBuffer.cpp
+        SourceManager.cpp
+        StringHelpers.cpp
+        Version.cpp)
