--- a/src/juice/Driver/CMakeLists.txt
+++ b/src/juice/Driver/CMakeLists.txt
@@ -9,7 +9,7 @@
 # See https://github.com/juice-lang/juice/blob/master/CONTRIBUTORS.txt for the list of juice project authors
 
 
-add_compile_options(${OTHER_COMPILE_FLAGS})
+add_compile_options(${OTHER_COMPILE_FLAG_LIST})
 
 add_library(juiceDriver STATIC
         CompilerDriver.cpp
