--- a/tools/juice/CMakeLists.txt
+++ b/tools/juice/CMakeLists.txt
@@ -9,9 +9,8 @@
 # See https://github.com/juice-lang/juice/blob/master/CONTRIBUTORS.txt for the list of juice project authors
 
 
-add_compile_options(${LLVM_COMPILE_FLAG_LIST})
-
 add_executable(juice juice.cpp)
+
 target_link_libraries(juice ncurses)
 target_link_libraries(juice
         juiceAST
@@ -22,5 +21,8 @@ target_link_libraries(juice
         juiceParser
         juiceSema)
 target_link_libraries(juice ${LLVM_LIB_LIST})
+
+target_compile_options(juice PRIVATE ${LLVM_COMPILE_FLAG_LIST})
+
 
 install(TARGETS juice DESTINATION bin)
