[WIP] Add a DriverTask class
The new Driver architecture will generate DriverTasks according to the
commandline arguments provided and they will be executed only if
necessary (i.e. if the output file of one task is older than its input
files).

--- a/src/juice/Basic/CMakeLists.txt
+++ b/src/juice/Basic/CMakeLists.txt
@@ -11,6 +11,7 @@
 
 add_library(juiceBasic STATIC
         Error.cpp
+        Process.cpp
         RawStreamHelpers.cpp
         SourceBuffer.cpp
         SourceManager.cpp
