[WIP] Add FrontendDriver class
The FrontendDriver class will eventually replace the CompilerDriver
class.
This commit also prepares the driver to switch from tclap to the
CommandLine library of LLVM.

--- a/src/juice/Driver/CMakeLists.txt
+++ b/src/juice/Driver/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library(juiceDriver STATIC
         Driver.cpp
         DriverTask.cpp
         ErrorDriver.cpp
+        FrontendDriver.cpp
         REPLDriver.cpp
         UsageDriver.cpp
         VersionDriver.cpp)
