[WIP] Add MainDriver class
The MainDriver class will parse all commandline arguments into
DriverTasks and will execute them afterwards.

--- a/src/juice/Driver/CMakeLists.txt
+++ b/src/juice/Driver/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(juiceDriver STATIC
         DriverTask.cpp
         ErrorDriver.cpp
         FrontendDriver.cpp
+        MainDriver.cpp
         REPLDriver.cpp
         UsageDriver.cpp
         VersionDriver.cpp)
