[feat] Switch to the new driver structure
The new driver utilizes the LLVM CommandLine library, so this commit
also removes the tclap dependency.

--- a/src/juice/Driver/CMakeLists.txt
+++ b/src/juice/Driver/CMakeLists.txt
@@ -10,14 +10,11 @@
 
 
 add_library(juiceDriver STATIC
-        CompilerDriver.cpp
         Driver.cpp
         DriverTask.cpp
-        ErrorDriver.cpp
         FrontendDriver.cpp
         MainDriver.cpp
         REPLDriver.cpp
-        UsageDriver.cpp
-        VersionDriver.cpp)
+        VersionPrinter.cpp)
 
-target_compile_options(juiceDriver PRIVATE ${OTHER_COMPILE_FLAG_LIST})
+target_compile_options(juiceDriver PRIVATE ${LLVM_COMPILE_FLAG_LIST})
