--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,17 @@ endif()
 
 llvm_map_components_to_libnames(LLVM_LIB_LIST support core)
 
+foreach(target ${LLVM_TARGETS_TO_BUILD})
+    set(asm_parser "LLVM${target}AsmParser")
+    set(code_gen "LLVM${target}CodeGen")
+    if(${asm_parser} IN_LIST LLVM_AVAILABLE_LIBS)
+        list(APPEND LLVM_LIB_LIST ${asm_parser})
+    endif()
+    if(${code_gen} IN_LIST LLVM_AVAILABLE_LIBS)
+        list(APPEND LLVM_LIB_LIST ${code_gen})
+    endif()
+endforeach()
+
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${LLVM_INCLUDE_DIRS})
