[feat] Implement driver actions
The compiler will now either dump the parsed or typechecked AST, or
emit LLVM IR, an object, or an executable file depending on the
commandline arguments.

--- a/src/juice/Driver/CMakeLists.txt
+++ b/src/juice/Driver/CMakeLists.txt
@@ -11,6 +11,7 @@
 
 add_library(juiceDriver STATIC
         Driver.cpp
+        DriverAction.cpp
         DriverTask.cpp
         FrontendDriver.cpp
         MainDriver.cpp
