[feat] Enable linking for macOS with a non-standard Xcode installation
The linker now gets the correct path of the macOS SDK, even when Xcode
is not located at the standard location (e.g. when Xcode-beta is used).

--- a/src/juice/CMakeLists.txt
+++ b/src/juice/CMakeLists.txt
@@ -15,4 +15,5 @@ add_subdirectory(Diagnostics)
 add_subdirectory(Driver)
 add_subdirectory(IRGen)
 add_subdirectory(Parser)
+add_subdirectory(Platform)
 add_subdirectory(Sema)
