[feat] Add support for returning a boolean at the end of a program
Currently, the last statement of every program is required to be an
expression, the value of which is printed when the program is run.
This value can now be a boolean. In this case the output will be either
"true" or "false", depending on the value of the boolean.

--- a/src/juice/Sema/CMakeLists.txt
+++ b/src/juice/Sema/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(juiceSema STATIC
         TypeCheckedDeclarationAST.cpp
         TypeCheckedExpressionAST.cpp
         TypeCheckedStatementAST.cpp
-        TypeChecker.cpp)
+        TypeChecker.cpp
+        TypeHint.cpp)
 
 target_compile_options(juiceSema PRIVATE ${LLVM_COMPILE_FLAG_LIST})
